Update yml files to support development branch

--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -3,10 +3,13 @@ name: Deploy PR previews
 concurrency: preview-${{ github.ref }}
 on:
   pull_request:
+    branches:
+      - development
     types:
       - opened
       - reopened
       - synchronize
+
 jobs:
   deploy-preview:
     runs-on: ubuntu-latest
